changes for github

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<script src="build/debug/request-es6.js"></script>
+	<script src="build/debug/request.js"></script>
     </head>
 </html>
